--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,39 @@ input{
     text-align: center;
     width: 150px;
 }
+
+/* bouton explorer */
+
+.explorer {
+    background: #f6f6f6;
+    text-align: center;
+    width: 100%;
+    padding: 40px 0;
+}
+
+.explorer h3 {
+    margin-top: 0px;
+}
+
+.explorer p {
+    font-size: 1rem;
+    
+}
+.explorer button {
+    background-image: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+    border: 1px solid transparent;
+    border-radius: 30px;
+    padding: 10px 15px;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: 4px 4px 6px #aaa;
+    cursor: pointer;
+}
+
+.explorer button:hover {
+    transform: scale(1.02);
+    opacity:0,9;
+    background-color: #ae80e5;
+    background-blend-mode: lighten;
+    box-shadow: 4px 4px 6px #000;
+}
