--- a/css/style.css
+++ b/css/style.css
@@ -204,3 +204,54 @@ input{
     background-blend-mode: lighten;
     box-shadow: 4px 4px 6px #000;
 }
+
+/* fonctionnement */
+.operation{
+    margin-bottom: 50px;
+    background-color: white;
+}
+.operation h2{
+    margin: 20px;
+}
+
+ul {
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-end: 0px;
+    padding-inline-start: 20px;
+    list-style-type: none;
+    margin-bottom: 50px;
+}
+
+.steps li:hover {
+    background: #f2eafb;
+  }
+.steps li:hover .fas {
+    color: #9356dc;
+}
+.number {
+    background: #9356DC;
+    color: #fff;
+    border-radius: 50%;
+    padding: 5px 9px;
+    margin-left: -25px;
+
+  }
+
+.li_number  {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: nowrap;
+    padding: 10px;
+    margin: 15px 20px 15px 30px;
+    border-radius: 20px;
+    box-shadow: 1px 2px 8px 2px #c4c4c4;
+    background-color: #f5f5f5;
+
+}
+
+.steps-icon{
+    padding: 1rem;
+}
