--- a/css/style.css
+++ b/css/style.css
@@ -255,3 +255,96 @@ ul {
 .steps-icon{
     padding: 1rem;
 }
+
+/*main-container*/
+
+.container{
+    background: #f2f2f2;
+    display: flex;
+    flex-direction: column;
+}
+.titre_resto{
+    margin: 20px;
+}
+
+.menus_resto{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 2rem;
+    row-gap: 2rem;
+    justify-content: space-evenly;
+
+}
+
+.resto{
+    border-radius: 25px;
+    box-shadow: 4px 4px 6px #aaa;
+    margin: 20px;
+    position: relative;
+    background: #fff;
+    text-decoration: none;
+    color: black;
+    display: flex;
+    flex-direction:column;
+    width: 100%;
+}
+.resto_img{
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    width: 100%;
+    height: 85%;
+    object-fit: cover;
+}
+.resto_badge{
+    color: #008766;
+    background: #99E2D0;
+    border: 5px solid #99E2D0;
+    border-radius: 5px;
+    position: absolute;
+    right: 1%;
+    top: 5%;
+
+}
+.resto_footer{
+    padding: 1rem;
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 25%
+}
+.resto_content{
+    flex: 1;
+}
+.resto_nom{
+    text-decoration: none;
+    margin-bottom: 0,25rem;
+    text-transform: capitalize;
+}
+.point_resto{
+    text-decoration: none;
+    margin: 0;
+
+}
+.resto_btn{
+    height: 2rem;
+    width: 2rem;
+    background-color: transparent;
+    border: transparent 0px solid;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.resto_like_fas{
+    color: transparent;
+    background-image: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+    background-clip: text;
+    -webkit-background-clip: text;
+    opacity: 0;
+    transition: all 200ms ease-in-out;
+}
+
+.resto_footer:hover .resto_like_fas{
+    opacity: 1;
+}
