--- a/css/style.css
+++ b/css/style.css
@@ -145,11 +145,19 @@ h1, h2 {
     font-size: 2rem;
 }
 
+.logo_arrow{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 .arrow {
     position: absolute;
     left: 20px;
 }
-
+a {
+    text-decoration: none;
+    color: black;
+}
 /*barre de recherche*/
 .ville {
     background: #eaeaea;
@@ -257,6 +265,9 @@ ul {
 }
 
 /*main-container*/
+.resto-main{
+    background-color: #f6f6f6;
+}
 
 .container{
     background: #f2f2f2;
@@ -347,4 +358,234 @@ ul {
 
 .resto_footer:hover .resto_like_fas{
     opacity: 1;
+}
+.menus_heart{
+    cursor: pointer;
+    color: black;
+    
+}
+.menus_heart :hover{
+    animation: fill 0.3s ease-in-out;
+    display: inline-block;
+    opacity: 1;
+    background: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+    background: -webkit-linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
+}
+
+/*menus-pages*/
+
+.banner img{
+    object-fit: cover;
+    width: 100%;
+    height: 250px;
+}
+.resto_tittle{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+.resto_tittle h2{
+    text-transform: capitalize;
+}
+.menu{
+    background-color: #f6f6f6;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    width: 100%;
+    position: relative;
+    margin-top: -50px;
+}
+
+.menus_heart{
+    cursor: pointer;
+    color: black;
+    
+}
+.menus_heart :hover{
+    animation: fill 0.3s ease-in-out;
+    display: inline-block;
+    opacity: 1;
+    background: linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+    background: -webkit-linear-gradient(to left, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
+}
+.menus_category{ 
+    background-color: #fff;
+    border-radius: 15px;
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 4px 4px 6px #aaa;
+    position: relative;
+    cursor: pointer;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    transition: padding-right 450ms ease-in-out;
+}
+.menus_category:hover {
+    padding-right: 75px;
+  }
+.menus_category:hover .menus-item_check {
+    opacity: 1;
+    transform: translate(-50px);
+  }
+.menus_category:hover .fa-check-circle {
+    transform: rotate(360deg);
+  }
+
+.menus_category h4 {
+    margin: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.menus_category p {
+    padding: 0;
+    margin: 0;
+}
+
+.menus-item{
+    cursor: pointer;
+    display: flex;
+    overflow: hidden;
+}
+
+.menus-item-description{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 1.5em;
+}
+.menus-item-description p {
+    margin: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+.menu-item_prix{
+    margin-left: auto;
+    font-weight: 900;
+    padding: 1rem;
+    display: flex;
+    align-items: flex-end;
+}
+
+.menus-item_check{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    background-color: #99E2D0;
+    width: 50px;
+    height: 63px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    position: absolute;
+    padding: 2px 0px 20px;
+    right: -50px;
+    top: 0;
+    opacity: 0;
+    transition: transform 330ms ease-in-out;
+}
+.cross .fa-check-circle {
+    color: #fff;
+    transition: transform 500ms ease-in-out;
+} .fa-check-circle {
+    color: #fff;
+    transition: transform 500ms ease-in-out;
+}
+.fa-check-circle{
+    color: white;
+}
+.menus_check{
+    place-items: center;
+    display:grid;
+    background: white;
+    aspect-ratio: 1;
+    width: 2rem;
+    border-radius: 1rem;
+    color: #99E2D0;
+    transition: transform 500ms ease-in-out;
+}
+
+.plats h3{
+    padding-left: 20px;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+
+.ligne {
+    width: 40px;
+    border: 2px solid #99E2D0;
+    margin-left: 20px;
+}
+.entrees h3{
+    padding-left: 20px;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+
+@keyframes fadein {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+.entrees{
+    animation: fadein 3s ease-in-out;
+}
+
+.plats{
+    animation: fadein 6s ease-in-out;
+}
+
+.DESSERTS{
+    animation: fadein 9s ease-in-out;
+}
+.DESSERTS h3{
+    padding-left: 20px;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+.line {
+    width: 40px;
+    border: 2px solid #99E2D0;
+    margin-left: 0px;
+    margin-top: -19px;
+}
+
+.Btn{
+    display: flex;
+    text-decoration: none;
+    justify-content: center;
+    
+}
+
+.commandBtn {
+    background-image: linear-gradient(to left, #cf64dc, #e86edb, #ff79da);
+    border: 1px solid transparent;
+    border-radius: 30px;
+    padding: 10px 5px;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: 4px 4px 6px #aaa;
+    cursor: pointer;
+    margin: 30px 0;
+    padding: 10px;
+    width: 40%;
+}
+
+.commandBtn:hover{
+    background-color: #ae80e5;
+    background-blend-mode: lighten;
+    box-shadow: 4px 4px 6px #000;
 }
