--- a/css/style.css
+++ b/css/style.css
@@ -622,3 +622,135 @@ ul {
     text-decoration: none;
     color: white;
 }
+
+/* MEDIA QUERY */
+
+@media screen and (min-width: 1440px) {
+    .operation h3 {
+      text-align: center;
+    }
+    .steps {
+        list-style-type: none;
+        flex-wrap: wrap;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+      }
+      
+    
+    .resto_footer{
+        padding: 1rem;
+        position: relative;
+        display: flex;
+        align-items: center;
+        height: 25%;
+      }
+  }
+  
+
+@media screen and (min-width: 1280px) {
+    .container {
+        padding: 0 20%;
+    }
+      .resto-main {
+        justify-content: space-around;
+      }
+      .entrees {
+        width: 400px;
+      }
+      .plats {
+        width: 400px;
+      }
+      .DESSERTS {
+        width: 400px;
+      }
+      .loader{
+        font-size: 100px;
+    }
+    
+      
+      .last_line p {
+        padding-right: 20px;
+      }
+      .resto_footer{
+        padding: 1rem;
+        position: relative;
+        display: flex;
+        align-items: center;
+        height: 25%;
+      }
+      
+      .m-menus{
+        display: flex;
+        justify-content: space-around;
+      }
+
+      .operation h2{
+        padding: 20px;
+        text-align: center;
+    }
+    .titre_resto {
+        width: 100%;
+        margin: 20px;
+        padding: 0 6rem;
+      }
+  }
+
+@media screen and (min-width: 768px) {
+    .number {
+        right: 0;
+        top: -15px;
+      }
+      .titre_resto {
+        width: 100%;
+        margin: 20px;
+        text-align: center;
+      }
+
+      .operation h2{
+        text-align: center;
+      }
+
+      .titre_resto h2 {
+        text-align: center;
+      }
+      .resto {
+            width: 40%;
+          }
+        .container {
+            display: flex;
+            justify-content: space-between;
+            flex-flow: row wrap;
+          }
+        .loader{
+            font-size: 100px;
+        }
+        
+          .steps {
+            flex-wrap: wrap;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+          }
+        .commandBtn{
+            width: 25%;
+        }
+          
+    .ft {
+      text-align: center;
+    }
+    .entrees,.DESSERTS, .plats {
+        width: 60%;
+        margin: auto;
+    }
+    .ft{
+        padding: 1rem 2rem;
+        color: white;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+
+}
