--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* général */
-@import url('https://fonts.googleapis.com/css2? family= Shrikhand & display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family= Shrikhand & display=swap');
 @import url('https://fonts.googleapis.com/css2? famille= Roboto:wght@300;400;500 &family= Shrikhand & display=swap');
-
+*/
 
 body,html{
     font-family: "Roboto", sans-serif;
